<resources>
    <string name="app_name">果果</string>
    <string name="action_settings">设置</string>
    <string name="action_addbaby">添加Baby</string>
    <string name="action_history">历史记录</string>
    <string name="action_allhist">全部记录</string>
    <string name="app_crtion">成长记</string>
    <string name="title_activity_settings">Settings</string>


    <string-array name="list_skill">
        <item>喝奶</item>
        <item>睡觉</item>
        <item>睡醒</item>
        <item>哭闹</item>
        <item>清醒</item>
        <item>粑粑</item>
        <item>尿尿</item>
      <!--  <item>体温</item>-->
    </string-array>
    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="btn">按钮</string>
    <string name="text_delete">删除</string>
    <string name="edit_action">add new skill</string>
    <string name="edit_action_name">编辑新本领</string>
    <string name="btn_ok">完成</string>
    <string name="baby_activity">Baby成长记</string>
    <string name="btn_add">添加新本领</string>
    <string name="btn_remove">删除</string>
    <string name="check_upadte">检查更新</string>
</resources>
